--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/header.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/header.html
@@ -28,10 +28,10 @@
             <a class="nav-link"  aria-current="page" th:href="@{/inicio/menu}">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" th:href="@{/ciudadano/inicio}">Ver Empleos</a>
+            <a class="nav-link " aria-current="page" th:href="@{/ciudadano/inicioCiudadano}">Buscar Empleos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/empleador/inicio}">Crear Empleo</a>
+            <a class="nav-link" th:href="@{/empleador/inicioEmpleador}">Crear Empleo</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" th:href="@{#}">Contactanos</a>
