--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
@@ -23,7 +23,12 @@
         <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
         <a class="nav-link " th:href="@{/ciudadano/verOfertasLaborales}">Ver Empleos</a>
         <a class="nav-link " th:href="@{/curso/inscripCurso}">Inscribirse a un curso</a>
-        <a class="nav-link" th:href="@{/inicio/menu}">Cerrar Sesion</a>
+        
+        <form th:action="@{/logout}" method="post" class="nav justify-content-end">
+					<button class="btn btn-outline-dark" type="submit" value="Salir">
+						Cerrar Sesion
+					</button>
+	    </form>
       </div>
      </div>
     </div>
