--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verCV.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verCV.html
@@ -16,7 +16,7 @@
           <div class="card-body">
               <blockquote class="blockquote mb-0">
                  <h3>Provincia: </h3><h3 th:text= "${ciudadano.provincia}" class=""> </h3>
-                <h2 th:text= "${ciudadano.cv.nombre}">A well-known quote, contained in a blockquote element.</h2>
+                <h2 th:text= "${ciudadano.cv.nombre}"></h2>
                  <section> Telefono: <a  th:text= "${ciudadano.telefono}"> </a> </section> 
                  <section> Fecha de nacimiento: <a  th:text= "${ciudadano.fechaNac}"> </a> </section>
                  <section> Dni: <a  th:text= "${ciudadano.usuario.username}"> </a> </section>
