--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
@@ -22,8 +22,7 @@
         <a class="nav-link active" aria-current="page" th:href="@{/ciudadano/crearCurriculum}">Crear CV</a>
         <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
         <a class="nav-link " th:href="@{/ciudadano/verOfertasLaborales}">Ver Empleos</a>
-        <a class="nav-link " th:href="@{/curso/inscripCurso}">Inscribirse a un curso</a>
-        
+        <a class="nav-link " th:href="@{/curso/listaCursos}">Inscribirse a un curso</a>
         <form th:action="@{/logout}" method="post" class="nav justify-content-end">
 					<button class="btn btn-outline-dark" type="submit" value="Salir">
 						Cerrar Sesion
