--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerEmp.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerEmp.html
@@ -21,6 +21,8 @@
         <a class="nav-link" th:href="@{/empleador/inicioEmpleador}">Inicio</a>
         <a class="nav-link"  th:href="@{/empleador/perfiles}">Ver perfiles laborales</a>
         <a class="nav-link"  th:href="@{/empleador/misEmpleos}">Mis ofertas laborales</a>
+        <a class="nav-link"  th:href="@{/curso/nuevo}">Crear Curso</a>
+        <a class="nav-link"  th:href="@{/empleador/misCursos}">Mis Cursos</a> 
         <form th:action="@{/logout}" method="post" class="nav justify-content-end">
 					<button class="btn btn-outline-dark" type="submit" value="Salir">
 						Cerrar Sesion
