--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
        <a class="nav-link" th:href="@{/ciudadano/inicioCiudadano}">Inicio</a>
-        <a class="nav-link active" aria-current="page" th:href="@{/ciudadano/crearCurriculum}">Crear CV</a>
+        <a class="nav-link active" aria-current="page" th:href="@{/ciudadano/crearCurriculum}">Mi CV</a>
         <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
         <a class="nav-link " th:href="@{/ciudadano/verOfertasLaborales}">Ver Empleos</a>
         <a class="nav-link " th:href="@{/curso/listaCursos}">Inscribirse a un curso</a>
