--- a/TrabajoFinal_Grupo18/src/main/resources/templates/registroCiudadano.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/registroCiudadano.html
@@ -15,7 +15,7 @@
 
  <h2> Registro de Nuevo Ciudadano</h2>
 
- <form class="row g-3 needs-validation" th:action="@{/ciudadano/postCiudadano}" th:object="${ciudadano}" method="POST">
+ <form class="row g-3 needs-validation" autocomplete="off" th:action="@{/ciudadano/postCiudadano}" th:object="${ciudadano}" method="POST">
   <div class="col-md-4 position-relative">
     <label for="idDNI" class="form-label">Dni</label>
     <input th:field=*{usuario.username} type="number" class="form-control" id="idDNI" placeholder="Ingrese DNI">
