--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verCV.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verCV.html
@@ -10,28 +10,26 @@
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
    <h2> MI CURRICULUM VITAE</h2>
       <div class=container> 
-         <a th:ref="@{/ciudadano/crearCurriculum}" type="button" class="btn btn-info">Editar</a>
+         
+          
           <div class="card">
-           <div th:text= "${ciudadano.email}" class="card-header"> </div>
-          <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                 <h3>Provincia: </h3><h3 th:text= "${ciudadano.provincia}" class=""> </h3>
-                <h2 th:text= "${ciudadano.cv.nombre}"></h2>
-                 <section> Telefono: <a  th:text= "${ciudadano.telefono}"> </a> </section> 
-                 <section> Fecha de nacimiento: <a  th:text= "${ciudadano.fechaNac}"> </a> </section>
-                 <section> Dni: <a  th:text= "${ciudadano.usuario.username}"> </a> </section>
-                 <section> Estado Civil: <a  th:text= "${ciudadano.estadoCivil}"> </a> </section>
-                 <section> Experiencia Laboral: </section>
-                 <p th:text= "${ciudadano.cv.expLaboral}"> </p>
-                 <section> Educacion: <a  th:text= "${ciudadano.cv.educacion}"> </a> </section> 
-                 <section> Idiomas: <a  th:text= "${ciudadano.cv.idiomas}"> </a> </section> 
-                 <section> Informacion Complementaria: <a  th:text= "${ciudadano.cv.infoComplementaria}"> </a> </section> 
-                 <footer class="blockquote-footer">- Contacto: <cite title="Source Title" th:text= "${ciudadano.cv.contacto}"></cite></footer>
+            <div class="card-body">
+              <blockquote class="blockquote mb-1">
+                
+                <h1 th:text= "${cv.nombre}"></h1>
+                 <img th:ref="@{/images/empleo1.png}" title="empleo" alt="empleo" />
+                 <section> <h4>Experiencia Laboral:</h4> <a  th:text= "${cv.expLaboral}"> </a> </section> 
+                 <section> <h4>Educacion: </h4> <a  th:text= "${cv.educacion}"> </a> </section> 
+                 <section> <h4>Idiomas:</h4> <a  th:text= "${cv.idiomas}"> </a> </section> 
+                 <section> <h4>Informacion Complementaria: </h4><a  th:text= "${cv.infoComplementaria}"> </a> </section> 
+                 <section> <h4>Contacto: </h4> <a  th:text= "${cv.contacto}"> </a> </section> 
+                 
+                
              </blockquote>
           </div>
          </div>
          
-   </div>
+        </div>
        
    <footer th:replace="/layouts/footer::footer"></footer>
 </body>
