--- a/TrabajoFinal_Grupo18/src/main/resources/templates/nuevoCurso.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/nuevoCurso.html
@@ -15,10 +15,10 @@
 
  <h2> Curso de Capacitacion </h2>
 
- <form class="row g-3 needs-validation" th:action="@{/curso/guardarCurso}" th:object="${curso}" method="POST">
+ <form class="row g-3 " autocomplete="off" th:action="@{/curso/guardarCurso}" th:object="${curso}" method="post">
   <div class="col-md-4 position-relative">
-    <label for="idNombre" class="form-label">Nombre: </label>
-    <input th:field=*{nombre} type="text" class="form-control" id="idNombre" placeholder="Ingrese nombre">
+    <label for="idNombre" class="form-label">Nombre del curso: </label>
+    <input th:field=*{nombre} type="text" class="form-control" id="idNombre" placeholder="Ingrese nombre del curso">
     <div class=text-danger th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div> 
      
   </div>
@@ -32,6 +32,12 @@
     <label for="fechaIncId" class="form-label">Fecha de Inicio: </label>
     <input th:field=*{fechaInic} type="date" class="form-control" id="fechaIncId" placeholder="Ingrese fecha de inicio ">
     <div class=text-danger th:if="${#fields.hasErrors('fechaInic')}" th:errors="*{fechaInic}"></div> 
+  </div>
+  
+  <div class="col-md-4 position-relative">
+    <label for="dictadorId" class="form-label">Dictado por: </label>
+    <input th:field=*{dictador} type="text" class="form-control" id="dictadorId" placeholder="Ingrese el nombre de su empresa.">
+    <div class=text-danger th:if="${#fields.hasErrors('dictador')}" th:errors="*{dictador}"></div> 
   </div>
   
   <div class="col-12 centraar">
