--- a/TrabajoFinal_Grupo18/src/main/resources/templates/crearCv.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/crearCv.html
@@ -15,27 +15,33 @@
   
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Contacto </label>
-    <input th:field="*{contacto}" type="text" class="form-control" id="inputEmail4">
+    <input th:field="*{contacto}" type="text" class="form-control" id="inputEmail4" placeholder="Ingrese gmail o telefono.">
+      <div class=text-danger th:if="${#fields.hasErrors('contacto')}" th:errors="*{contacto}"></div>  
   </div>
   <div class="col-md-6">
     <label for="inputExp4" class="form-label">Experiencia Laboral</label>
-    <input th:field="*{expLaboral}" type="text" class="form-control" id="inputExp4">
+    <input th:field="*{expLaboral}" type="text" class="form-control" id="inputExp4" placeholder="Ingrese experiencia laboral">
+          <div class=text-danger th:if="${#fields.hasErrors('expLaboral')}" th:errors="*{expLaboral}"></div>  
   </div>
   <div class="col-6">
     <label for="inputEdu" class="form-label">Educacion</label>
     <input th:field="*{educacion}" type="text" class="form-control" id="inputW¡Edu" placeholder="Ingrese educacion">
+                    <div class=text-danger th:if="${#fields.hasErrors('educacion')}" th:errors="*{educacion}"></div>  
   </div>
   <div class="col-6">
     <label for="inputIdiomas2" class="form-label">idiomas</label>
     <input th:field="*{idiomas}" type="text" class="form-control" id="inputIdiomas2" placeholder="Ingrese idiomas">
+                   <div class=text-danger th:if="${#fields.hasErrors('idiomas')}" th:errors="*{idiomas}"></div>  
   </div>
   <div class="col-md-6">
     <label for="inputZip" class="form-label">Informacion complementaria</label>
-    <input th:field="*{infoComplementaria}" type="text" class="form-control" id="inputZip">
+    <input th:field="*{infoComplementaria}" type="text" class="form-control" id="inputZip" placeholder="Ingrese informacion complementaria.">
+                   <div class=text-danger th:if="${#fields.hasErrors('infoComplementaria')}" th:errors="*{infoComplementaria}"></div>  
   </div>
   <div class="col-md-6">
     <label for="inputZip" class="form-label">Nombre y Apellido</label>
-    <input th:field="*{nombre}" type="text" class="form-control" id="inputZip">
+    <input th:field="*{nombre}" type="text" class="form-control" id="inputZip" placeholder="Ingrese nombre y apellido completo.">
+                   <div class=text-danger th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>  
   </div>
   <div class="col-md-6">
    <label for="inputIdiomas2" class="form-label">Conocimientos informaticos:</label>
@@ -52,6 +58,7 @@
   <input  th:field="*{conocimientoInfo}" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
   <label class="form-check-label" for="inlineRadio3">Avanzado </label>
 </div>
+                <div class=text-danger th:if="${#fields.hasErrors('conocimientoInfo')}" th:errors="*{conocimientoInfo}"></div>  
 </div>
    
   <div class="col-12">
