--- a/TrabajoFinal_Grupo18/src/main/resources/templates/cursosInscripciones.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/cursosInscripciones.html
@@ -4,31 +4,30 @@
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
 		<meta charset="utf-8">
-         <title>MIS CURSOS</title>
+         <title>MIS INSCRIPCIONES</title>
 </head>
 <body>
-   <header th:replace="/layouts/headerEmp::headerEmp"></header> 
-    <div th:if="${param.error}" class="alert alert-danger" role="alert"> Aun no tiene ningun curso.</div>
+   <header th:replace="/layouts/headerCiu::headerCiu"></header> 
+
     <div class="row justify-content-center">
     <div class="col-md-10 ">
-    <h2> Mis Cursos </h2>
-     <a th:href="@{/curso/nuevo}" id="curso" type="button" class="btn btn-info">Nuevo curso</a>
+    <h2> Mis Inscripciones </h2>
+      <a th:href="@{/curso/listaCursos}" id="curso" type="button" class="btn btn-info">Inscribirse a un curso</a>
      <table class="table table-success table-striped">
      <tr>
      <th> Titulo</th>
      <th> Categoria</th>
      <th> Fecha inicio</th>
-     <th> Opciones </th>
+     <th> Dictado por: </th>
      </tr>
-     <tr th:each="c:${cursos}">
+     <tr th:each="c:${listaCursos}">
       <td th:text="${c.nombre}"></td>
       <td th:text="${c.categoria}"></td>
       <td th:text="${#temporals.format(c.fechaInic,'dd/MM/yyyy')}"></td>
-      <td>
-          <a id="editarCurso" type="button" class="btn btn-info">Eliminar</a>
-      </td>
+      <td th:text="${c.dictador}"></td>
      </tr>
      </table>
+     
     </div>
     </div>
    <footer th:replace="/layouts/footer::footer"></footer>
