empleador hstml, controlador oferta laboral

--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
@@ -14,7 +14,7 @@
   <div class="card-img-overlay">
     <h2 class="card-title">OFERTAS LABORALES</h2>
     <h4 class="centraar">Bienvenido/a!!</h4> 
-    <p class="card-text"> Aqui puede encontrar el empleo que esta buscando.</p>
+    <p class="card-text"> ofertas laborales disponibles</p>
   </div>
 </div>
   <div class="container">
