--- a/TrabajoFinal_Grupo18/src/main/resources/templates/pagEmpleador.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/pagEmpleador.html
@@ -9,6 +9,39 @@
 <body>
    <header th:replace="/layouts/headerEmp::headerEmp"></header> 
 
+      <div class="card bg-dark text-white">
+  <img th:src="@{/images/img.jpg}" class="card-img" alt="fondo" height="300px">
+  <div class="card-img-overlay">
+    <h2 class="card-title">OFERTAS LABORALES</h2>
+    <h4 class="centraar">Bienvenido/a!!</h4> 
+    <p class="card-text"> Gracias por su registro. En este sitio podra encontrar el empleo que esta buscando.<br>
+     Antes de postularse a un empleo, debera crear su cv para que los empleadores puedan ver su perfil.</p>
+  </div>
+</div>
+  <section>
+   <div class="row row-cols-1 row-cols-md-3 g-4">
+	  <div class="col">
+	   <div class="card" style="width: 18rem;">
+	      <img th:src="@{/images/empleo.jpg}" class="card-img-top" alt="empleo" height="180px">
+	      <div class="card-body">
+	        <h5 class="card-title">Busqueda de Perfiles laborales</h5>
+	         <p class="card-text">lista de postulantes</p>
+	        <a href="#" class="btn btn-dark">Ver Empleos</a>
+	      </div>
+	    </div>
+	    </div>
+	    <div class="col">
+		    <div class="card" style="width: 18rem;">
+		      <img th:src="@{/images/imagen.webp}" class="card-img-top" alt="dd" height="180px">
+		      <div class="card-body">
+		        <h5 class="card-title">Oferta Laborales</h5>
+		         <p class="card-text"> </p>
+		        <a href="#" class="btn btn-secondary">C</a>
+		      </div>
+		    </div>
+	    </div>
+    </div> 
+  </section>
   
    <footer th:replace="/layouts/footer::footer"></footer>
 </body>
