--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
@@ -52,7 +52,7 @@
   				</tr>
   			</thead>
   			<tbody>
-				<tr th:each="o:${ofertaLaboral}">
+				<tr th:each="o:${ofertas}">
 					 <td th:text="${o.puestoReq}"></td>
 					 <td th:text="${o.resumenPuesto}"></td>
 					 <td th:text="${o.dispHoraria}"></td>
