--- a/TrabajoFinal_Grupo18/src/main/resources/templates/crearOferta.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/crearOferta.html
@@ -11,7 +11,7 @@
 <div class="container">
 	<div class="row justify-content-center mt-5 pt-5">
 	  <h2>CREAR OFERTA</h2>
-	   <form th:action="@{/ofertaLaboral/modificar}" method="post" th:object="${ofertaLaboral}" class="row g-3">
+	   <form th:action="@{/guardar}" method="post" th:object="${ofertaLaboral}" class="row g-3">
 		  
 		  <div class="col-md-6">
 		    <label for="inputEmail4" class="form-label">CANTIDAD DE VACANTES</label>
