Se agrego correcciones y funciones a las ofertas laborales, verificar

--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerEmp.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerEmp.html
@@ -20,7 +20,8 @@
       <div class="navbar-nav">
         <a class="nav-link" th:href="@{/empleador/inicioEmpleador}">Inicio</a>
         <a class="nav-link"  th:href="@{/empleador/perfiles}">Ver perfiles laborales</a>
-        <a class="nav-link"  th:href="@{/empleador/misEmpleos}">Mis ofertas laborales</a>
+        <a class="nav-link"  th:href="@{/empleador/crearEmpleo}">Crear empleos</a>
+        <a class="nav-link"  th:href="@{/empleador/misEmpleos}">Mis empleos</a>
         <a class="nav-link"  th:href="@{/curso/nuevo}">Crear Curso</a>
         <a class="nav-link"  th:href="@{/empleador/misCursos}">Mis Cursos</a> 
         <form th:action="@{/logout}" method="post" class="nav justify-content-end">
