--- a/TrabajoFinal_Grupo18/src/main/resources/templates/crearOferta.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/crearOferta.html
@@ -7,23 +7,26 @@
          <title>OFERTAS LABORALES</title>
 </head>
 <body>
-   <header th:replace="/layouts/headerEmp::headerEmp"></header> 
+   <header th:replace="/layouts/headerCiu::headerEmp"></header> 
 <div class="container">
 	<div class="row justify-content-center mt-5 pt-5">
 	  <h2>CREAR OFERTA</h2>
-	   <form th:action="@{/empleador/guardarEmpleo}" method="POST" th:object="${ofertaLaboral}" class="row g-3">
+	   <form th:action="@{/guardar}" method="post" th:object="${ofertaLaboral}" class="row g-3">
 		  
 		  <div class="col-md-6">
 		    <label for="inputEmail4" class="form-label">CANTIDAD DE VACANTES</label>
-		    <input th:field="*{cantVacantes}" type="number" class="form-control" id="inputEmail4">
+		    <input th:field="*{cantVacantes}" type="text" class="form-control" id="inputEmail4">
+		    <div class=text-danger th:if="${#fields.hasErrors('cantVacantes')}" th:errors="*{cantVacantes}"></div>
 		  </div>
 		  <div class="col-md-6">
 		    <label for="inputExp4" class="form-label">PUESTO REQUERIDO</label>
 		    <input th:field="*{puestoReq}" type="text" class="form-control" id="inputExp4">
+		    <div class=text-danger th:if="${#fields.hasErrors('puestoReq')}" th:errors="*{puestoReq}"></div>
 		  </div>
 		  <div class="col-6">
 		    <label for="inputEdu" class="form-label">RESUMEN DE PUESTO</label>
 		    <input th:field="*{resumenPuesto}" type="text" class="form-control" id="inputW¡Edu" placeholder="describa puesto de trabajo">
+		    <div class=text-danger th:if="${#fields.hasErrors('resumenPuesto')}" th:errors="*{resumenPuesto}"></div>
 		  </div>
 		  <div class="col-md-4 position-relative">
 		    <label for="DispHoraria" class="form-label">DISPONIBILIDAD HORARIA</label>
@@ -35,30 +38,38 @@
 		  <div class="col-6">
 		    <label for="inputIdiomas2" class="form-label">PRINCIPALES TAREAS</label>
 		    <input th:field="*{princTareas}" type="text" class="form-control" id="inputIdiomas2" placeholder="describa las tarea a realizar">
+		    <div class=text-danger th:if="${#fields.hasErrors('princTareas')}" th:errors="*{PrincTareas}"></div>
 		  </div>
 		  <div class="col-md-6">
 		    <label for="inputZip" class="form-label">JORNADA</label>
 		    <input th:field="*{jornada}" type="text" class="form-control" id="inputZip">
+		    <div class=text-danger th:if="${#fields.hasErrors('jornada')}" th:errors="*{jornada}"></div>
 		  </div>
 		  <div class="col-md-6">
 		    <label for="inputZip" class="form-label">SALARIO</label>
-		    <input th:field="*{salario}" type="number" class="form-control" id="inputZip">
+		    <input th:field="*{salario}" type="text" class="form-control" id="inputZip">
+		    <div class=text-danger th:if="${#fields.hasErrors('salario')}" th:errors="*{salario}"></div>
 		  </div>
 		   <div class="col-md-6">
 		    <label for="inputZip" class="form-label">BENEFICIO</label>
-		    <input th:field="*{beneficios}" type="text" class="form-control" id="inputZip">
+		    <input th:field="*{beneficio}" type="text" class="form-control" id="inputZip">
+		    <div class=text-danger th:if="${#fields.hasErrors('beneficio')}" th:errors="*{beneficio}"></div>
 		  </div>
-		  <div class="col-md-6 position-relative">
-		    <label for="DispId" class="form-label">DISPONIBLE</label>
-		    <select th:field=*{disponible} class="form-select" id="DispId" >
-		      <option value="true" >SI</option>
-		      <option value="false" >NO</option>
+		  <div class="col-md-4 position-relative">
+		    <label for="DispHoraria" class="form-label">DISPONIBLE</label>
+		    <select th:field=*{dispHoraria} class="form-select" id="DispHoraria" >
+		      <option value=true >SI</option>
+		      <option value=false >NO</option>
 		    </select>
 		  </div>
-		  <div class="col-md-6">
-		    <label for="inputZip" class="form-label">REQUISITOS</label>
-		    <input th:field="*{requisitos}" type="text" class="form-control" id="inputZip">
+		  
+		  <h4> Para realizar los cambios debe ingresar su contraseña: </h4> 
+		  <div class="col-md-4 position-relative">
+		    <label for="ContraseñaId" class="form-label">Contraseña</label>
+		    <input th:field=*{usuario.contraseña} type="password" class="form-control" id="ContraseñaId" placeholder="Ingrese contraseña">
+		    <div class=text-danger th:if="${#fields.hasErrors('usuario.contraseña')}" th:errors="*{usuario.contraseña}"></div> 
 		  </div>
+		  
 		  <div class="col-12">
 		    <button type="submit" class="btn btn-primary">Guardar cambios</button>
 		  </div>
