--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
@@ -22,6 +22,7 @@
         <a class="nav-link active" aria-current="page" th:href="@{/ciudadano/crearCurriculum}">Mi CV</a>
         <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
         <a class="nav-link " th:href="@{/ciudadano/verOfertasLaborales}">Ver Empleos</a>
+        <a class="nav-link " th:href="@{/ciudadano/misPostulaciones}">Mis postulaciones</a>
         <a class="nav-link " th:href="@{/curso/listaCursos}">Inscribirse a un curso</a>
         <a class="nav-link " th:href="@{/curso/cursosInscripciones}">Mis cursos</a>
         <form th:action="@{/logout}" method="post" class="nav justify-content-end">
